<resources>
    <string name="app_name">RaiMeet</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- General -->
    <string name="chatroom">聊天室</string>
    <string name="friend">好友</string>
    <string name="home">Monster Hunter</string>
    <string name="history">對戰紀錄</string>
    <string name="profile">個人資訊</string>
    <string name="testPostCrawling">發表文章</string>
    <string name="testChatRoom">開啟聊天室</string>

    <!-- Postdailog -->
    <string name="crawlingName">文章名稱</string>
    <string name="roomName">房間名稱</string>
    <string name="time">開場時間</string>
    <string name="textcontent">文字內容</string>
    <string name="sent">送出</string>
    <string name="armschoose">需要武器 ：</string>
    <string name="missionType">任務類型 ：</string>
    <string name="crawlingType">文章類型：</string>
    <string name="monstername">魔物名稱 ：</string>
    <string name="time_title_text">良辰吉時 ：</string>
    <string name="chooseDate">選擇日期</string>
    <string name="chooseTime">選擇時間</string>
    <string name="postDialog_text">《魔物獵人 世界（Monster Hunter World）》在今日正式開啟了遊戲新的季節活動：夏季暮光節（Summer Twilight Fest）。在此次節日期間遊戲不僅將有相應的裝扮，同時遊戲中也將更新大量每日限時任務以及合作任務等，可以讓玩家解鎖全新的裝備。</string>

    <!-- Error -->
    <string name="notGood">我也是笑笑的拉</string>

    <!-- Home -->
    <string name="testGo">我是來測試的自述</string>
    <string name="testType">活動</string>
    <string name="testArms">武器</string>
    <string name="home_sent">送出</string>
    <string name="home_attendee">參戰</string>

    <!--SignIn -->
    <string name="google_signIn">Google SignIn</string>
    <string name="google_sign_in_textPerson">選擇繼續即表示您同意接受我們的</string>
    <string name="google_sign_in_textAnd">和</string>
    <string name="google_sign_in_textTerms">服務條款</string>
    <string name="google_sign_in_textTerms2">隱私權條款</string>

    <!-- SignOut -->
    <string name="google_signOut">Google SignOut</string>

    <!-- ChatRoom list -->
    <string name="chatRoom_test_text">我是來自測試的文字</string>
    <string name="chatRoom_test_text_short">短文字測</string>

    <!-- ChatRoom Post even -->
    <string name="chatRoom_post_typeName_text">任務類型 ：</string>
    <string name="chatRoom_post＿monsterName_text">魔物名稱 ：</string>
    <string name="chatRoom_post＿button">送 出</string>
    <string name="chatRoom_not_your_room">這好像不是你開的房間</string>

    <!-- ChatRoom detail -->
    <string name="chatRoom_detail_userId">紙火箭</string>
    <string name="chatRoom_detail_message">斬擊大騷動！！？取得洛克人票生產隨從裝備「洛克人貓系列」，讓隨從化身為彷彿從８bit世界走出來的洛克人吧！</string>
    <string name="chatRoom_detail_createTime">2020-07-15-12:00</string>
    <string name="chatRoom_detail_toolbar">聊天室名稱</string>
    <string name="chatRoom_detail_start_button">任務開始</string>
    <string name="chatRoom_detail_end_button">任務結束</string>
    <string name="chatRoom_detail_mission_success">成功</string>
    <string name="chatRoom_detail_mission_fail">失敗</string>
    <string name="chatRoom_detail_navigate_text">前往評分頁面</string>
    <string name="chatRoom_detail_time_startText">遊戲開始</string>
    <string name="chatRoom_detail_time_endText">遊戲結束</string>
    <string name="chatRoom_detail_enter_message">訊息...</string>
    <string name="chatRoom_detail_end_back">退</string>
    <string name="chatRoom_detail_end_hit">打</string>
    <string name="chatRoom_detail_end_wait">等</string>
    <string name="chatRoom_detail_end_mackUp">補</string>
    <string name="chatRoom_detail_gaming">遊戲進行中</string>

    <!--ChatRoom Score -->
    <string name="chatRoom_score_userName">紙火箭</string>
    <string name="chatRoom_score_mission_successful">成功</string>
    <string name="chatRoom_score_mission_fail">失敗</string>
    <string name="chatRoom_score_title">評 分</string>
    <string name="chatRoom_score_sent_button">完成</string>
    <string name="chatRoom_score_fake_score">777</string>
    <string name="chatRoom_score_fake_arms">操蟲棍</string>
    <string name="chatRoom_score_finish_text">恭喜你完成了這次的任務，給予和你一起打拼的同伴評分吧！</string>
    <string name="chatRoom_score_remind">貼心小提醒：一個同伴只能給予一次加減的機會唷</string>
    <string name="chatRoom_score_arms_text">目前總分 : </string>

    <!--Friend List -->
    <string name="friend_list_username">紙火箭</string>
    <string name="friend_list_email">Ray3456789@gmail.com</string>
    <string name="friend_list_search">ex : A1234567@gmail.com</string>

    <!--History List -->
    <string name="history_mission_type">限時任務</string>
    <string name="history_list_no_value_text">快去來場既分高下也決生死的戰鬥吧！</string>

    <!--profile -->
    <string name="profile_all_crawling">事件總數 : </string>
    <string name="profile_all_game">參戰次數 ： </string>
    <string name="profile_all_number">1234567</string>
    <string name="profile_ratingBar_god">神</string>

    <!-- friend detail -->
    <string name="friend_detail_follow">追蹤</string>

    <!-- crawling detail -->
    <string name="crawling_detail_leave_message">留言板 : </string>


    <!-- dialog work info -->
    <string name="dialog_workManager_info1">
        讓想跟你組隊隊友知道你何時打算開始這個遊戲室，設定的時間到時我們會通知你開始遊戲。
    </string>

    <string name="dialog_workManager_info_title1">
        選擇時間 :
    </string>

    <string name="dialog_workManager_info_title2">
        不選擇時間 :
    </string>

    <string name="dialog_workManager_info2">
    不設定開始時間將部會收到任何通知。
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
