<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
    <item
        android:id="@+id/chatRoomFragment"
        android:icon="@drawable/ic_comment_black_24dp"
        android:title="@string/chatroom" />
    <item
        android:id="@+id/friendFragment"
        android:icon="@drawable/ic_comment_black_24dp"
        android:title="@string/friend" />
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_comment_black_24dp"
        android:title="@string/home" />
    <item
        android:id="@+id/historyFragment"
        android:icon="@drawable/ic_comment_black_24dp"
        android:title="@string/history" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_comment_black_24dp"
        android:title="@string/profile" />

    </group>

</menu>