<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ray.monsterhunter.crawlingdetail.CrawlingDetailViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".crawlingdetail.CrawlingDetail">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            >

            <TextView
                android:id="@+id/crawling_detail_title"
                style="@style/crawling_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@{viewModel.crawling.roomname}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/chatRoom_test_text" />

            <ImageView
                android:id="@+id/crawling_detail_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/toolbar_back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/crawling_detail_data_type"
                style="@style/home_data_button"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@drawable/home_type_background"
                android:text="@{viewModel.crawling.type}"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/crawling_detail_title"
                tools:text="@string/testType" />

            <ImageView
                android:id="@+id/crawling_detail_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/ic_monster"
                imageUrl="@{viewModel.crawling.image}"
                app:layout_constraintBottom_toBottomOf="@id/crawling_detail_image_shape"
                app:layout_constraintEnd_toEndOf="@id/crawling_detail_image_shape"
                app:layout_constraintStart_toStartOf="@id/crawling_detail_image_shape"
                app:layout_constraintTop_toTopOf="@id/crawling_detail_image_shape" />

            <TextView
                android:id="@+id/crawling_detail_image_shape"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/chatroom_list_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/crawling_detail_title" />

            <TextView
                android:id="@+id/crawling_detail_monster_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{viewModel.crawling.monsterType}"
                app:layout_constraintEnd_toEndOf="@id/crawling_detail_image"
                app:layout_constraintStart_toStartOf="@id/crawling_detail_image"
                app:layout_constraintTop_toBottomOf="@id/crawling_detail_image"
                tools:text="@string/chatRoom_test_text_short" />

            <TextView
                android:id="@+id/crawling_detail_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/chatroom_post_text_background"
                android:padding="8dp"
                android:text="@{viewModel.crawling.text}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/crawling_detail_monster_name"
                tools:text="@string/postDialog_text" />

            <TextView
                android:id="@+id/crawling_detail_create_time"
                style="@style/crawling_Detail_createTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@{viewModel.crawling.createTime.toString()}"
                app:layout_constraintEnd_toEndOf="@id/crawling_detail_text"
                app:layout_constraintTop_toBottomOf="@id/crawling_detail_text"
                tools:text="1234567890987654" />

            <TextView
                android:id="@+id/crawling_detail_detail_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@color/gray_cccccc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/crawling_detail_create_time" />

            <TextView
                android:id="@+id/crawling_detail_leave_message_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/crawling_Detail_leave_message"
                app:layout_constraintTop_toBottomOf="@id/crawling_detail_detail_line"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/crawling_detail_leave_message"
                android:layout_marginTop="4dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/crawling_detail_leave_message_recy"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="2dp"
                app:layout_constraintTop_toBottomOf="@+id/crawling_detail_leave_message_text"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="35dp"
                tools:listitem="@layout/item_crawling_detail_leave_message"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                />



        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/crawling_detail_editText_background"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/chatroom_detail_ed_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/crawling_detail_item_editText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="60dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/crawling_detail_editText_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/crawling_detail_editText_background" />

        <ImageView
            android:id="@+id/crawling_detail_sentMessage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_arms_flout"
            app:layout_constraintBottom_toBottomOf="@+id/crawling_detail_item_editText"
            app:layout_constraintEnd_toEndOf="@+id/crawling_detail_editText_background"
            app:layout_constraintTop_toTopOf="@id/crawling_detail_item_editText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>